--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container section">
       <h2><br>Jun-Hyuk Kim
-        <a id=link href="http://scholar.google.com/citations?user=A0io6mQAAAAJ&hl=en/" target="_blank" color=#000000><i class="fas fa-graduation-cap"></i></a>
+        <a id=link href="http://scholar.google.com/citations?user=A0io6mQAAAAJ&hl=en" target="_blank" color=#000000><i class="fas fa-graduation-cap"></i></a>
         <a id=link href="http://github.com/junhyukk/" target="_blank"><i class="fab fa-github"></i></a>
       </h2>
       <hr width="100%" align="left" color="#EAECEE">
