--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       </h2>
       <hr width="100%" align="left" color="#EAECEE">
       <div class="row featurette">
-        <!-- <div class="col-md-3 text-center"> -->
-        <div class="col-md-3 profile-img">
+        <div class="col-md-3 profile-img text-center">
           <img src="./junhyuk_kim.jpg" class="rounded-circle img-fluid" width="250">
         </div>
         <div class="col-md-9">
@@ -105,10 +104,22 @@
         <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/w13/html/Kim_Deep_Residual_Network_CVPR_2018_paper.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="https://github.com/junhyukk/EUSR-Tensorflow" target="_blank"><i class="fab fa-github"></i> GitHub</a>
       </p>
       <p class="publication-item">
+        <span class="lead">NTIRE 2018 challenge on single image super-resolution: methods and results</span><br />
+        R. Timofte et al. (including <strong>J.-H. Kim</strong>)<br />
+        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshops</em>, pp. 965-976, Jun. 2018<br />
+        <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/w13/html/Kim_Deep_Residual_Network_CVPR_2018_paper.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
+      </p>
+      <p class="publication-item">
         <span class="lead">Assessing product design using photos and real products</span><br />
         S.-E. Moon, <strong>J.-H. Kim</strong>, S.-W. Kim, J.-S. Lee<br />
         <em>ACM Conf. Human Factors in Computing Systems (CHI), Extended Abstract</em>, pp. 1100-1107, May 2017<br />
         <a href="https://doi.org/10.1145/3027063.3053336" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
+      </p>
+      <p class="publication-item">
+        <span class="lead">Travel photo album summarization based on aesthetic quality, interestingness, and memorableness</span><br />
+        <strong>J.-H. Kim</strong>, J.-S. Lee<br />
+        <em>APSIPA Annual Summit and Conference</em>, Dec. 2016<br />
+        <a href="https://doi.org/10.1109/APSIPA.2016.7820889" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
       </p>
     </div>
     
