--- a/index.html
+++ b/index.html
@@ -82,13 +82,14 @@
         <p class="publication-item">
           <span class="lead">MAMNet: Multi-path adaptive modulation network for image super-resolution</span><br />
           <strong>J.-H. Kim</strong>, J.-H. Choi, M. Cheon, J.-S. Lee<br />
-          <em>Neurocomputing</em>, accepted<br />
-          <a href="https://arxiv.org/abs/1811.12043" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/junhyukk/MAMNet-tensorflow" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+          <em>Neurocomputing</em>, vol. 402, pp. 38-49, August 2020<br />
+          <a href="https://doi.org/10.1016/j.neucom.2020.03.069" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="https://arxiv.org/abs/1811.12043" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/junhyukk/MAMNet-tensorflow" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
         <p class="publication-item">
           <span class="lead">Deep learning-based image super-resolution considering quantitative and perceptual quality</span><br />
           J.-H. Choi, <strong>J.-H. Kim</strong>, M. Cheon, J.-S. Lee<br />
-          <em>Neurocomputing</em>, accepted<br />
+          <em>Neurocomputing</em>, vol. 398, pp. 347-359, July 2020<br />
+          <a href="https://doi.org/10.1016/j.neucom.2019.06.103" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / 
           <a href="https://arxiv.org/abs/1809.04789" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/idearibosome/tf-perceptual-eusr" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>    
         <p class="publication-item">
@@ -103,14 +104,36 @@
       <section class="sub-section">      
         <h3><li><span>Conferences</span></li></h3>
         <p class="publication-item">
+          <span class="lead">Instability of successive deep image compression</span><br />
+          <strong>J.-H. Kim</strong>, S. Jang, J.-H. Choi, J.-S. Lee<br />
+          <em>ACM Multimedia (MM)</em>, Oct. 2020
+        </p>
+        <p class="publication-item">
+          <span class="lead">LarvaNet: hierarchical super-resolution via multi-exit architecture</span><br />
+          G.-W. Jeon, J.-H. Choi, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
+          <em>European Conference on Computer Vision (ECCV) Workshops</em>, Aug. 2020
+        </p>
+        <p class="publication-item">
+          <span class="lead">AIM 2020 challenge on efficient super-resolution: methods and results</span><br />
+          K. Zhang et al. (including <strong>J.-H. Kim</strong>)<br />
+          <em>European Conference on Computer Vision (ECCV) Workshops</em>, Aug. 2020
+        </p>
+        <p class="publication-item">
+          <span class="lead">AIM 2020 challenge on real image super-resolution: methods and results</span><br />
+          P. Wei et al. (including <strong>J.-H. Kim</strong>)<br />
+          <em>European Conference on Computer Vision (ECCV) Workshops</em>, Aug. 2020
+        </p>
+        <p class="publication-item">
           <span class="lead">Efficient deep learning-based lossy image compression via asymmetric autoencoder and pruning</span><br />
           <strong>J.-H. Kim</strong>, J.-H. Choi, J. Chang, J.-S. Lee<br />
-          <em>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, May 2020
+          <em>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 2063-2067, May 2020<br />
+          <a href="https://doi.org/10.1109/ICASSP40776.2020.9053102" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
           <span class="lead">SRZoo: An integrated repository for super-resolution using deep learning</span><br />
           J.-H. Choi, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
-          <em>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, May 2020<br />
+          <em>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 2508-2512, May 2020<br />
+          <a href="https://doi.org/10.1109/ICASSP40776.2020.9054533" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> /
           <a href="https://github.com/idearibosome/srzoo" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
         <p class="publication-item">
