--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
       <section class="sub-section">      
         <h3><li><span>Conferences</span></li></h3>
         <p class="publication-item">
+          <span class="lead">Adversarially robust deep image super-resolution using entropy regularization</span><br />
+          J.-H. Choi, H. Zhang, <strong>J.-H. Kim</strong>, C.-J. Hsieh, J.-S. Lee<br />
+          <em>Asian Conference on Computer Vision (ACCV)</em>, Nov. 2020
+        </p>
+        <p class="publication-item">
           <span class="lead">Instability of successive deep image compression</span><br />
           <strong>J.-H. Kim</strong>, S. Jang, J.-H. Choi, J.-S. Lee<br />
           <em>ACM Multimedia (MM)</em>, Oct. 2020
