--- a/index.html
+++ b/index.html
@@ -106,12 +106,14 @@
         <p class="publication-item">
           <span class="lead">Adversarially robust deep image super-resolution using entropy regularization</span><br />
           J.-H. Choi, H. Zhang, <strong>J.-H. Kim</strong>, C.-J. Hsieh, J.-S. Lee<br />
-          <em>Asian Conference on Computer Vision (ACCV)</em>, Nov. 2020
+          <em>Asian Conference on Computer Vision (ACCV)</em>, Nov. 2020<br />
+          <a href="https://openaccess.thecvf.com/content/ACCV2020/html/Choi_Adversarially_Robust_Deep_Image_Super-Resolution_using_Entropy_Regularization_ACCV_2020_paper.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
           <span class="lead">Instability of successive deep image compression</span><br />
           <strong>J.-H. Kim</strong>, S. Jang, J.-H. Choi, J.-S. Lee<br />
-          <em>ACM Multimedia (MM)</em>, Oct. 2020
+          <em>ACM Multimedia (MM)</em>, Oct. 2020<br />
+          <a href="https://doi.org/10.1145/3394171.3413680" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
           <span class="lead">LarvaNet: hierarchical super-resolution via multi-exit architecture</span><br />
@@ -121,12 +123,14 @@
         <p class="publication-item">
           <span class="lead">AIM 2020 challenge on efficient super-resolution: methods and results</span><br />
           K. Zhang et al. (including <strong>J.-H. Kim</strong>)<br />
-          <em>European Conference on Computer Vision (ECCV) Workshops</em>, Aug. 2020
+          <em>European Conference on Computer Vision (ECCV) Workshops</em>, Aug. 2020<br />
+          <a href="https://arxiv.org/abs/2009.06943" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
         <p class="publication-item">
           <span class="lead">AIM 2020 challenge on real image super-resolution: methods and results</span><br />
           P. Wei et al. (including <strong>J.-H. Kim</strong>)<br />
-          <em>European Conference on Computer Vision (ECCV) Workshops</em>, Aug. 2020
+          <em>European Conference on Computer Vision (ECCV) Workshops</em>, Aug. 2020<br />
+          <a href="https://arxiv.org/abs/2009.12072" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
         <p class="publication-item">
           <span class="lead">Efficient deep learning-based lossy image compression via asymmetric autoencoder and pruning</span><br />
@@ -169,7 +173,7 @@
           <span class="lead">NTIRE 2018 challenge on single image super-resolution: methods and results</span><br />
           R. Timofte et al. (including <strong>J.-H. Kim</strong>)<br />
           <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshops</em>, pp. 965-976, Jun. 2018<br />
-          <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/w13/html/Kim_Deep_Residual_Network_CVPR_2018_paper.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
+          <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/w13/html/Timofte_NTIRE_2018_Challenge_CVPR_2018_paper.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
           <span class="lead">Assessing product design using photos and real products</span><br />
