--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <p class="publication-item">
           <span class="lead">Lightweight and efficient image super-resolution with block state-based recursive network</span><br />
           J.-H. Choi, <strong>J.-H. Kim</strong>, M. Cheon, J.-S. Lee<br />
-          <em>arXiv:1811.12546</em>, November 2018<br />
+          <em>arXiv:1811.12546</em>, Nov. 2018<br />
           <a href="https://arxiv.org/abs/1811.12546" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/idearibosome/tf-bsrn-sr" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
       </section>
@@ -82,13 +82,13 @@
         <p class="publication-item">
           <span class="lead">MAMNet: Multi-path adaptive modulation network for image super-resolution</span><br />
           <strong>J.-H. Kim</strong>, J.-H. Choi, M. Cheon, J.-S. Lee<br />
-          <em>Neurocomputing</em>, vol. 402, pp. 38-49, August 2020<br />
+          <em>Neurocomputing</em>, vol. 402, pp. 38-49, Aug. 2020<br />
           <a href="https://doi.org/10.1016/j.neucom.2020.03.069" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="https://arxiv.org/abs/1811.12043" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/junhyukk/MAMNet-tensorflow" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
         <p class="publication-item">
           <span class="lead">Deep learning-based image super-resolution considering quantitative and perceptual quality</span><br />
           J.-H. Choi, <strong>J.-H. Kim</strong>, M. Cheon, J.-S. Lee<br />
-          <em>Neurocomputing</em>, vol. 398, pp. 347-359, July 2020<br />
+          <em>Neurocomputing</em>, vol. 398, pp. 347-359, Jul. 2020<br />
           <a href="https://doi.org/10.1016/j.neucom.2019.06.103" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / 
           <a href="https://arxiv.org/abs/1809.04789" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/idearibosome/tf-perceptual-eusr" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>    
@@ -148,19 +148,19 @@
         <p class="publication-item">
           <span class="lead">Evaluating robustness of deep image super-resolution against adversarial attacks</span><br />
           J.-H. Choi, H. Zhang, <strong>J.-H. Kim</strong>, C.-J. Hsieh, J.-S. Lee<br />
-          <em>IEEE International Conference on Computer Vision (ICCV)</em>, pp. 303-311, October 2019<br />
+          <em>IEEE International Conference on Computer Vision (ICCV)</em>, pp. 303-311, Oct. 2019<br />
           <a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Choi_Evaluating_Robustness_of_Deep_Image_Super-Resolution_Against_Adversarial_Attacks_ICCV_2019_paper.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="https://arxiv.org/abs/1904.06097" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
         <p class="publication-item">
           <span class="lead">Deep learning-based super-resolution for digital comics</span><br />
           <strong>J.-H. Kim</strong>, J.-H. Choi, C.-H. Seo, J. Chang, J.-S. Lee<br />
-          <em>SIGGRAPH Asia 2018 Posters</em>, Article 19, December 2018<br />
+          <em>SIGGRAPH Asia 2018 Posters</em>, Article 19, Dec. 2018<br />
           <a href="https://doi.org/10.1145/3283289.3283337" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
           <span class="lead">Generative adversarial network-based image super-resolution using perceptual content losses</span><br />
           M. Cheon, <strong>J.-H. Kim</strong>, J.-H. Choi, J.-S. Lee<br />
-          <em>European Conference on Computer Vision (ECCV) Workshops</em>, pp. 51-62, September 2018<br />
+          <em>European Conference on Computer Vision (ECCV) Workshops</em>, pp. 51-62, Sep. 2018<br />
           <a href="https://doi.org/10.1007/978-3-030-11021-5_4" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="http://arxiv.org/abs/1809.04783" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/manricheon/eusr-pcl-tf" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
         <p class="publication-item">
@@ -193,17 +193,22 @@
     <!-- Section: awards -->
     <section class="container section" id="awards">
       <h2><i class="fas fa-award"></i> Awards</h2>
-      <section class="sub-section">      
+      <section class="sub-section">   
+        <p class="award-item">
+          <span class="lead">Merit Academic Paper Award</span><br />
+          <em>2020-2 Yonsei Superior Paper Awards</em>, Dec. 2020<br />
+          <small>Korean: 2020년 2학기 연세대학교 대학원생 우수논문 장려상</small>
+        </p>   
         <p class="award-item">
           <span class="lead">2nd Place (Region 1)</span><br />
           Yonsei-MCML team<br />
-          <em>Super-Resolution Challenge on Perceptual Image Restoration and Manipulation (PIRM)</em>, in conjunction with ECCV, September 2018<br />
+          <em>Super-Resolution Challenge on Perceptual Image Restoration and Manipulation (PIRM)</em>, in conjunction with ECCV, Sep. 2018<br />
           <a href="https://www.pirm2018.org/PIRM-SR.html#leaderboard" target="_blank"><i class="fas fa-external-link-square-alt"></i> Leaderboard</a> / <a href="https://github.com/manricheon/eusr-pcl-tf" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
         <p class="award-item">
           <span class="lead">2nd Place (Region 2)</span><br />
           Yonsei-MCML team<br />
-          <em>Super-Resolution Challenge on Perceptual Image Restoration and Manipulation (PIRM)</em>, in conjunction with ECCV, September 2018<br />
+          <em>Super-Resolution Challenge on Perceptual Image Restoration and Manipulation (PIRM)</em>, in conjunction with ECCV, Sep. 2018<br />
           <a href="https://www.pirm2018.org/PIRM-SR.html#leaderboard" target="_blank"><i class="fas fa-external-link-square-alt"></i> Leaderboard</a> / <a href="https://github.com/idearibosome/tf-perceptual-eusr" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
       </section>
