--- a/index.html
+++ b/index.html
@@ -110,9 +110,19 @@
           <a href="https://openaccess.thecvf.com/content/ACCV2020/html/Choi_Adversarially_Robust_Deep_Image_Super-Resolution_using_Entropy_Regularization_ACCV_2020_paper.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
+          <span class="lead">Multi-scale adaptive residual network using total variation for real image super-resolution</span><br />
+          K.-H. Ahn, <strong>J.-H. Kim</strong>, J.-H. Choi, J.-S. Lee<br />
+          <em>International Conference on Consumer Electronics Asia (ICCE-Asia)</em>, pp. 349-352, Nov. 2020<br />
+        </p>
+        <p class="publication-item">
+          <span class="lead">Efficient bokeh effect rendering using generative adversarial network</span><br />
+          M.-S. Choi, <strong>J.-H. Kim</strong>, J.-H. Choi, J.-S. Lee<br />
+          <em>International Conference on Consumer Electronics Asia (ICCE-Asia)</em>, pp. 404-408, Nov. 2020<br />
+        </p>
+        <p class="publication-item">
           <span class="lead">Instability of successive deep image compression</span><br />
           <strong>J.-H. Kim</strong>, S. Jang, J.-H. Choi, J.-S. Lee<br />
-          <em>ACM Multimedia (MM)</em>, Oct. 2020<br />
+          <em>ACM Multimedia (MM)</em>, pp. 247-255, Oct. 2020<br />
           <a href="https://doi.org/10.1145/3394171.3413680" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
