--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <!-- Navigaton brand -->
         <a class="navbar-brand font-weight-bold" href="#">Jun-Hyuk Kim</a>
         <a class="navbar-brand" href="http://scholar.google.com/citations?user=A0io6mQAAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-        <a class="navbar-brand mr-auto" href="http://github.com/junhyukk/" target="_blank"><i class="fab fa-github"></i></a>
+        <a class="navbar-brand" href="http://github.com/junhyukk/" target="_blank"><i class="fab fa-github"></i></a>
+        <a class="navbar-brand mr-auto" href="CV.pdf" target="_blank"><i class="fas fa-file-pdf"></i></a>
 
         <!-- Navtigation toggler button-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#my_navbar_contents" aria-controls="my_navbar_contents" aria-expanded="false" aria-label="Toggle navigation">
