--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
       <section class="sub-section">      
         <h3><li><span>Journals</span></li></h3>
         <p class="publication-item">
+          <span class="lead">Volatile-nonvolatile memory network for progressive image super-resolution</span><br />
+          J.-H. Choi, <strong>J.-H. Kim</strong>, M. Cheon, J.-S. Lee<br />
+          <em>IEEE Access</em>, vol. 9, pp. 37487-37496, Mar. 2021<br />
+          <a href="https://doi.org/10.1109/ACCESS.2021.3063760" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
+        </p>
+        <p class="publication-item">
           <span class="lead">MAMNet: Multi-path adaptive modulation network for image super-resolution</span><br />
           <strong>J.-H. Kim</strong>, J.-H. Choi, M. Cheon, J.-S. Lee<br />
           <em>Neurocomputing</em>, vol. 402, pp. 38-49, Aug. 2020<br />
@@ -114,11 +120,13 @@
           <span class="lead">Multi-scale adaptive residual network using total variation for real image super-resolution</span><br />
           K.-H. Ahn, <strong>J.-H. Kim</strong>, J.-H. Choi, J.-S. Lee<br />
           <em>International Conference on Consumer Electronics Asia (ICCE-Asia)</em>, pp. 349-352, Nov. 2020<br />
+          <a href="https://doi.org/10.1109/ICCE-Asia49877.2020.9276925" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
           <span class="lead">Efficient bokeh effect rendering using generative adversarial network</span><br />
           M.-S. Choi, <strong>J.-H. Kim</strong>, J.-H. Choi, J.-S. Lee<br />
           <em>International Conference on Consumer Electronics Asia (ICCE-Asia)</em>, pp. 404-408, Nov. 2020<br />
+          <a href="https://doi.org/10.1109/ICCE-Asia49877.2020.9276807" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
           <span class="lead">Instability of successive deep image compression</span><br />
@@ -129,7 +137,8 @@
         <p class="publication-item">
           <span class="lead">LarvaNet: hierarchical super-resolution via multi-exit architecture</span><br />
           G.-W. Jeon, J.-H. Choi, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
-          <em>European Conference on Computer Vision (ECCV) Workshops</em>, Aug. 2020
+          <em>European Conference on Computer Vision (ECCV) Workshops</em>, Aug. 2020<br />
+          <a href="https://doi.org/10.1007/978-3-030-67070-2_4" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
           <span class="lead">AIM 2020 challenge on efficient super-resolution: methods and results</span><br />
