--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <h2><i class="fas fa-newspaper"></i> Publications</h2>
       
       <!-- Sub-section: preprints -->
-      <section class="sub-section">      
+<!--       <section class="sub-section">      
         <h3><li><span>Preprints</span></li></h3>
         <p class="publication-item">
           <span class="lead">Lightweight and efficient image super-resolution with block state-based recursive network</span><br />
@@ -75,7 +75,7 @@
           <em>arXiv:1811.12546</em>, Nov. 2018<br />
           <a href="https://arxiv.org/abs/1811.12546" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/idearibosome/tf-bsrn-sr" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
-      </section>
+      </section> -->
 
       <!-- Sub-section: journals -->
       <section class="sub-section">      
@@ -84,7 +84,7 @@
           <span class="lead">Volatile-nonvolatile memory network for progressive image super-resolution</span><br />
           J.-H. Choi, <strong>J.-H. Kim</strong>, M. Cheon, J.-S. Lee<br />
           <em>IEEE Access</em>, vol. 9, pp. 37487-37496, Mar. 2021<br />
-          <a href="https://doi.org/10.1109/ACCESS.2021.3063760" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
+          <a href="https://doi.org/10.1109/ACCESS.2021.3063760" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="https://github.com/idearibosome/tf-vmnet" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
         <p class="publication-item">
           <span class="lead">MAMNet: Multi-path adaptive modulation network for image super-resolution</span><br />
