--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
       <section class="sub-section">      
         <h3><li><span>Conferences</span></li></h3>
         <p class="publication-item">
+          <span class="lead">Just one moment: Structural vulnerability of deep action recognition against one frame attack</span><br />
+          J. Hwang, <strong>J.-H. Kim</strong>, J.-H. Choi, J.-S. Lee<br />
+          <em>IEEE International Conference on Computer Vision (ICCV)</em>, Oct. 2021<br />
+          <a href="https://arxiv.org/abs/2011.14585" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
+        </p>
+        <p class="publication-item">
           <span class="lead">Adversarially robust deep image super-resolution using entropy regularization</span><br />
           J.-H. Choi, H. Zhang, <strong>J.-H. Kim</strong>, C.-J. Hsieh, J.-S. Lee<br />
           <em>Asian Conference on Computer Vision (ACCV)</em>, Nov. 2020<br />
@@ -135,7 +141,7 @@
           <a href="https://doi.org/10.1145/3394171.3413680" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>
         <p class="publication-item">
-          <span class="lead">LarvaNet: hierarchical super-resolution via multi-exit architecture</span><br />
+          <span class="lead">LarvaNet: Hierarchical super-resolution via multi-exit architecture</span><br />
           G.-W. Jeon, J.-H. Choi, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
           <em>European Conference on Computer Vision (ECCV) Workshops</em>, Aug. 2020<br />
           <a href="https://doi.org/10.1007/978-3-030-67070-2_4" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
