--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
       <section class="sub-section">      
         <h3><li><span>Conferences</span></li></h3>
         <p class="publication-item">
+          <span class="lead">Edge attention network for image deblurring and super-resolution</span><br />
+          J.-W. Han, J.-H. Choi, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
+          <em>IEEE International Conference on Systems, Man, and Cybernetics (SMC)</em>, Oct. 2021<br />
+        </p>
+        <p class="publication-item">
           <span class="lead">Just one moment: Structural vulnerability of deep action recognition against one frame attack</span><br />
           J. Hwang, <strong>J.-H. Kim</strong>, J.-H. Choi, J.-S. Lee<br />
           <em>IEEE International Conference on Computer Vision (ICCV)</em>, Oct. 2021<br />
