--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
         </div>
         <div class="col-md-8">
           <p class="lead font-weight-normal">
-            I am a PhD student at the <a href="http://mcml.yonsei.ac.kr/" target="_blank">Multimedia Computing and Machine Learning (MCML) Group</a> of <a href="https://www.yonsei.ac.kr/en_sc/" target="_blank">Yonsei University</a> under the supervision of Prof. Jong-Seok Lee. I received the B.S. degree in the <a href="http://sit.yonsei.ac.kr/" target="_blank">School of Integrated Technology</a> from Yonsei University, South Korea, in 2015. My research interests include low-level computer vision and deep learning.
+            I am a PhD student at the <a href="http://mcml.yonsei.ac.kr/" target="_blank">Multimedia Computing and Machine Learning (MCML) Group</a> of <a href="https://www.yonsei.ac.kr/en_sc/" target="_blank">Yonsei University</a> under the supervision of Prof. Jong-Seok Lee. I received the B.S. degree in the <a href="http://sit.yonsei.ac.kr/" target="_blank">School of Integrated Technology</a> from Yonsei University, South Korea, in 2015. My research interests include low-level computer vision and deep learning.<br /><br />
+            <strong>Experiences</strong>
+            <li>Research Intern at <a href="https://naver-career.gitbook.io/en/teams/clova-cic" target="_blank">NAVER AI Lab</a> (Jun. 2021 - Nov. 2021)</li>
           </p>    
         </div>
       </div>
@@ -102,7 +104,7 @@
         <p class="publication-item">
           <span class="lead">Prediction of car design perception using EEG and gaze patterns</span><br />
           S.-E. Moon, <strong>J.-H. Kim</strong>, S.-W. Kim, J.-S. Lee<br />
-          <em>IEEE Transactions on Affective Computing</em>, accepted<br />
+          <em>IEEE Transactions on Affective Computing</em>, vol. 12, no. 4, pp. 843-856, 2021<br />
           <a href="https://doi.org/10.1109/TAFFC.2019.2901733" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
         </p>  
       </section>
@@ -111,15 +113,29 @@
       <section class="sub-section">      
         <h3><li><span>Conferences</span></li></h3>
         <p class="publication-item">
-          <span class="lead">Edge attention network for image deblurring and super-resolution</span><br />
-          J.-W. Han, J.-H. Choi, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
-          <em>IEEE International Conference on Systems, Man, and Cybernetics (SMC)</em>, Oct. 2021<br />
+          <span class="lead">Joint global and local hierarchical priors for learned image compression</span><br />
+          <strong>J.-H. Kim</strong>, B. Heo, J.-S. Lee<br />
+          <em>arXiv preprint</em>, Dec. 2021<br />
+          <a href="https://arxiv.org/abs/2112.04487" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
         <p class="publication-item">
           <span class="lead">Just one moment: Structural vulnerability of deep action recognition against one frame attack</span><br />
           J. Hwang, <strong>J.-H. Kim</strong>, J.-H. Choi, J.-S. Lee<br />
-          <em>IEEE International Conference on Computer Vision (ICCV)</em>, Oct. 2021<br />
+          <em>IEEE International Conference on Computer Vision (ICCV)</em>, pp. 7668-7676, Oct. 2021<br />
+          <a href="https://openaccess.thecvf.com/content/ICCV2021/html/Hwang_Just_One_Moment_Structural_Vulnerability_of_Deep_Action_Recognition_Against_ICCV_2021_paper.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> /
           <a href="https://arxiv.org/abs/2011.14585" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
+        </p>
+        <p class="publication-item">
+          <span class="lead">Edge attention network for image deblurring and super-resolution</span><br />
+          J.-W. Han, J.-H. Choi, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
+          <em>IEEE International Conference on Systems, Man, and Cybernetics (SMC)</em>, pp. 2393-2398, Oct. 2021<br />
+        </p>
+        <p class="publication-item">
+          <span class="lead">NTIRE 2021 challenge on image deblurring</span><br />
+          S. Nah et al. (including <strong>J.-H. Kim</strong>)<br />
+          <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR) Workshops</em>, Jun. 2021<br />
+          <a href="https://openaccess.thecvf.com/content/CVPR2021W/NTIRE/html/Nah_NTIRE_2021_Challenge_on_Image_Deblurring_CVPRW_2021_paper.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> /
+          <a href="https://arxiv.org/abs/2104.14854" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
         <p class="publication-item">
           <span class="lead">Adversarially robust deep image super-resolution using entropy regularization</span><br />
@@ -174,6 +190,7 @@
           J.-H. Choi, <strong>J.-H. Kim</strong>, J.-S. Lee<br />
           <em>IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)</em>, pp. 2508-2512, May 2020<br />
           <a href="https://doi.org/10.1109/ICASSP40776.2020.9054533" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> /
+          <a href="https://arxiv.org/abs/2006.01339" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> /
           <a href="https://github.com/idearibosome/srzoo" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
         <p class="publication-item">
