--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <p class="publication-item">
           <span class="lead">Joint global and local hierarchical priors for learned image compression</span><br />
           <strong>J.-H. Kim</strong>, B. Heo, J.-S. Lee<br />
-          <em>arXiv preprint</em>, Dec. 2021<br />
+          <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, Jun. 2022<br />
           <a href="https://arxiv.org/abs/2112.04487" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
         <p class="publication-item">
