--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
           <a href="https://doi.org/10.1109/ACCESS.2021.3063760" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / <a href="https://github.com/idearibosome/tf-vmnet" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
         <p class="publication-item">
+          <span class="lead">Prediction of car design perception using EEG and gaze patterns</span><br />
+          S.-E. Moon, <strong>J.-H. Kim</strong>, S.-W. Kim, J.-S. Lee<br />
+          <em>IEEE Transactions on Affective Computing</em>, vol. 12, no. 4, pp. 843-856, 2021<br />
+          <a href="https://doi.org/10.1109/TAFFC.2019.2901733" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
+        </p>  
+        <p class="publication-item">
           <span class="lead">MAMNet: Multi-path adaptive modulation network for image super-resolution</span><br />
           <strong>J.-H. Kim</strong>, J.-H. Choi, M. Cheon, J.-S. Lee<br />
           <em>Neurocomputing</em>, vol. 402, pp. 38-49, Aug. 2020<br />
@@ -101,21 +107,21 @@
           <a href="https://doi.org/10.1016/j.neucom.2019.06.103" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> / 
           <a href="https://arxiv.org/abs/1809.04789" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a> / <a href="https://github.com/idearibosome/tf-perceptual-eusr" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>    
-        <p class="publication-item">
-          <span class="lead">Prediction of car design perception using EEG and gaze patterns</span><br />
-          S.-E. Moon, <strong>J.-H. Kim</strong>, S.-W. Kim, J.-S. Lee<br />
-          <em>IEEE Transactions on Affective Computing</em>, vol. 12, no. 4, pp. 843-856, 2021<br />
-          <a href="https://doi.org/10.1109/TAFFC.2019.2901733" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a>
-        </p>  
       </section>
 
       <!-- Sub-section: conferences -->   
       <section class="sub-section">      
         <h3><li><span>Conferences</span></li></h3>
         <p class="publication-item">
+          <span class="lead">Deep image destruction: Vulnerability of deep image-to-image models against adversarial attacks</span><br />
+          J.-H. Choi, H. Zhang, <strong>J.-H. Kim</strong>, C.-J. Hsieh, J.-S. Lee<br />
+          <em>International Conference on Pattern Recognition (ICPR)</em>, Aug. 2022<br />
+        </p>
+        <p class="publication-item">
           <span class="lead">Joint global and local hierarchical priors for learned image compression</span><br />
           <strong>J.-H. Kim</strong>, B. Heo, J.-S. Lee<br />
-          <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, Jun. 2022<br />
+          <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR)</em>, pp. 5992-6001, Jun. 2022<br />
+          <a href="https://openaccess.thecvf.com/content/CVPR2022/html/Kim_Joint_Global_and_Local_Hierarchical_Priors_for_Learned_Image_Compression_CVPR_2022_paper.html" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> /
           <a href="https://arxiv.org/abs/2112.04487" target="_blank"><i class="fas fa-external-link-square-alt"></i> arXiv</a>
         </p>
         <p class="publication-item">
