--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="container section" id="home">
       <div class="row align-items-center">
         <div class="col-md-4 text-center">
-          <img src="junhyuk_kim.jpg" class="border-7 rounded-circle w-75">
+          <img src="junhyuk.jpeg" class="rounded-circle w-75">
           <div class="pt-1 pb-3">
             <h3>Jun-Hyuk Kim</h3>
             <h4 class="lead font-weight-normal">Ph.D. student</h4>
