Update index.html & CV.pdf

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
       <section class="sub-section">      
         <h3><li><span>Journals</span></li></h3>
         <p class="publication-item">
+          <span class="lead">Successive learned image compression: Comprehensive analysis of instability</span><br />
+          <strong>J.-H. Kim</strong>, S. Jang, J.-H. Choi, J.-S. Lee<br />
+          <em>Neurocomputing</em>, accepted<br />
+        </p>
+        <p class="publication-item">
           <span class="lead">Volatile-nonvolatile memory network for progressive image super-resolution</span><br />
           J.-H. Choi, <strong>J.-H. Kim</strong>, M. Cheon, J.-S. Lee<br />
           <em>IEEE Access</em>, vol. 9, pp. 37487-37496, Mar. 2021<br />
