--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
           <span class="lead">Successive learned image compression: Comprehensive analysis of instability</span><br />
           <strong>J.-H. Kim</strong>, S. Jang, J.-H. Choi, J.-S. Lee<br />
           <em>Neurocomputing</em>, accepted<br />
+          <a href="https://doi.org/10.1016/j.neucom.2022.07.065" target="_blank"><i class="fas fa-external-link-square-alt"></i> Detail</a> 
         </p>
         <p class="publication-item">
           <span class="lead">Volatile-nonvolatile memory network for progressive image super-resolution</span><br />
